; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/extr_messenger.c_ceph_dns_resolve_name.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/extr_messenger.c_ceph_dns_resolve_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_entity_addr = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, %struct.ceph_entity_addr*, i8, i8**)* @ceph_dns_resolve_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ceph_dns_resolve_name(i8* %0, i64 %1, %struct.ceph_entity_addr* %2, i8 signext %3, i8** %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.ceph_entity_addr*, align 8
  %9 = alloca i8, align 1
  %10 = alloca i8**, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store %struct.ceph_entity_addr* %2, %struct.ceph_entity_addr** %8, align 8
  store i8 %3, i8* %9, align 1
  store i8** %4, i8*** %10, align 8
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
